# hermes-jarvis

./: .gitignore  README.md  Spec.md  pyproject.toml
agent-shim/: README.md
agents/: README.md  apollo.yaml  artemis.yaml  athena.yaml  boramae.yaml  hephaestus.yaml  janus.yaml  minerva.yaml
apps/: README.md
assets/: README.md
channels/: README.md
config/: pipeline.yaml  sender-map.example.md  sender_rules.yaml  subject_rules.yaml  workstream_rules.yaml
credentials/: README.md
docs/: cron.md  houroboros-discord-gateway.md  houroboros-workflow.md  minerva-discord-gateway.md  minerva-workflow.md  playbooks.md  productized-jarvis.en.md  productized-jarvis.ko.md  productized-zeus-os.en.md  productized-zeus-os.ko.md  public-guide.en.md  public-guide.ko.md  public-sync.md  schema.md  source-watch-health.md  zeus-os-a2a-protocol-review.md  zeus-os-adapter-contract.md  zeus-os-agent-runtime-design.md  zeus-os-final-implementation-plan.md  zeus-os-operator-guide.md  zeus-os-rebrand-migration.md  zeus-os-usage-guide.md
journals/: README.md
scripts/: arm-opencode-gateway-recovery.sh  gate_daily_hot_issues_delivery.py  install.sh  lint_daily_hot_issues_content.py  mail-secretary-watchdog.py  patch_google_workspace_wrapper.py  render_daily_hot_issues_pdf.py  verify.sh
systemd/: hermes-gateway.service  jinwang-jarvis-cycle.service  jinwang-jarvis-cycle.timer  jinwang-jarvis-hermes-health.service  jinwang-jarvis-weekly-review.service  zeus-os-cycle.service  zeus-os-cycle.timer  zeus-os-hermes-health.service  zeus-os-hermes-health.timer  zeus-os-weekly-review.service
(+505 files in other folders)
